--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#a-m">About Me</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li>
+                <a
+                  href="https://docs.google.com/document/d/1DMO6qKdQUqa2_NUbdHLCH1gouhaybjEyyXJ2XPTV10U/edit?usp=sharing"
+                  download="cesarOlguin-resume"
+                  id="resume"
+                  >Resume PDF</a
+                >
+              </li>
         </ul>
     </div>
   </div>
